[tool.poetry]
name = "nla"
version = "0.1.0"
description = "Nginx Log Analyzer"
authors = ["Nikita"]
readme = "README.md"
packages = [{ include = "nla" }]

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
flake8 = "^7.2.0"
pytest = "^8.4.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts", "docs", "tests"]
disable_error_code = ["name-defined"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
#extend-ignore = E501
